--- a/exercicios/Exercicios_Aula5/Exer3/css/estilo.css
+++ b/exercicios/Exercicios_Aula5/Exer3/css/estilo.css
@@ -1,5 +1,6 @@
 body {
-    background-image: url("imagens/bg.jpg");
+    background-image: url("../imagens/bg.jpg");
+
     background-repeat: no-repeat;
 }
 
@@ -7,4 +8,57 @@ body {
     width: 350px;
     height: 270px;
     background-color: rgba(255, 255, 255, 0.6);
+    margin: auto;
+    border-radius: 10px;
+    position: absolute;
+    top: 0px;
+    bottom: 0px;
+    left: 0px;
+    right: 0px;
+    padding: 15px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+    box-sizing: border-box;
 }
+
+#formulario form{
+    width: 300px;
+    margin: auto;
+}
+
+#formulario p {
+    text-align: center;
+    font-size: xx-large;
+    margin: 0px;
+}
+
+#formulario .campos{
+    height: 30px;
+    border: 2px solid #ddd;
+    padding-left: 5px;
+    width: 220px;
+    margin: 5px;
+}
+
+a{
+    text-align: right;
+    font-size: medium;
+    text-decoration: none;
+    color: blue;
+    display: block;
+}
+
+#logar{
+    width: 100%;
+    font-size: larger;
+    background-color: rgb(7, 107, 16);
+    color: #ddd;
+    border: 1px solid rgb(37, 35, 35);
+    padding: 15px;
+    margin-top: 15px;
+    border-radius: 10px;
+
+}
+
+
+
+
