--- a/exercicios/Exercicios_Aula6/css/style.css
+++ b/exercicios/Exercicios_Aula6/css/style.css
@@ -23,10 +23,33 @@ header{
 }
 
 .box{
-    width: 300px;
+    width: 290px;
     display: inline-block;
     text-align: justify;
-    padding: 5px;
+    padding: 10px;
     border: 1px solid rgba(0, 0, 0, 0.336);
     border-radius: 25px;
 }
+
+.box img{
+    width: 50%;
+}
+
+figure{
+    text-align: center;
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
+
+.box a{
+    font-size: medium;
+    text-align: left;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    text-decoration: none;
+}
+
+p{
+    font-size: small;
+}
+
